<resources>
    <string name="app_name">AIICap Invest</string>

    <string name="get_started">GET STARTED</string>
    <string name="skip">SKIP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Sign Up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email Address</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="iagree">I agree to the CAP Invest terms and conditions.</string>
    <string name="login">LOGIN</string>
    <string name="log_in">Log In</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="already_have_an_acc">Already have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_acc">Don\'t have an account?</string>
    <string name="register">REGISTER</string>
    <string name="remember_me">Keep me logged in</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_kyc">Update KYC</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="invest">Invest</string>
    <string name="withdraw">Withdraw</string>
    <string name="logout">Logout</string>
    <string name="withdrawals">Withdrawals</string>
    <string name="addnewphoto">Add a new photo</string>
    <string name="personalinformation">PERSONAL INFORMATION</string>
    <string name="editpassword">Edit password</string>
    <string name="residential_address">Residential Address</string>
    <string name="spinner_title">Identity Card Type</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string-array name="identity_type">
        <item>National ID</item>
        <item>Passport</item>
        <item>Voter\'s Card</item>
    </string-array>
</resources>
