<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/update_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/update_profile" />

        <item
            android:id="@+id/update_kyc"
            android:icon="@drawable/ic_profile"
            android:title="@string/update_kyc" />

        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

    </group>

    <item
        android:id="@+id/wallet"
        android:icon="@drawable/ic_wallet"
        android:title="@string/wallet" />

    <item
        android:id="@+id/invest"
        android:icon="@drawable/ic_profile"
        android:title="@string/invest" />

    <item
        android:id="@+id/withdrawals"
        android:icon="@drawable/ic_withdraw"
        android:title="@string/withdrawals" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>