<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".Login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/thirty">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@drawable/login_edit"
            android:singleLine="true"
            android:textSize="15sp"
            android:padding="@dimen/ten"
            android:layout_marginTop="30sp"
            android:layout_below="@id/login_text"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="@drawable/login_edit"
            android:singleLine="true"
            android:textSize="15sp"
            android:padding="@dimen/ten"
            android:layout_marginTop="@dimen/twenty"
            android:layout_below="@id/email"/>

        <CheckBox
            android:id="@+id/remember_me"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:checked="true"
            android:layout_marginTop="@dimen/five"
            android:layout_below="@+id/password"
        />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/main_color"
            android:background="@drawable/button_login"
            android:layout_marginTop="@dimen/thirty"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/remember_me"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/twenty"
        />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have_an_acc"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/thirty"
    />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_signup"
        android:layout_marginStart="@dimen/thirty"
        android:layout_marginEnd="@dimen/thirty"
        android:layout_marginTop="@dimen/ten"
    />
</LinearLayout>