<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".KYCFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/thirty">


        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:textSize="15sp"
            android:background="@drawable/signup_edit"
            android:singleLine="true"
            android:padding="10sp"
            android:layout_marginTop="30sp"/>

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:textSize="15sp"
            android:singleLine="true"
            android:background="@drawable/signup_edit"
            android:padding="10sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/firstname"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="15sp"
            android:singleLine="true"
            android:layout_marginTop="10sp"
            android:background="@drawable/signup_edit"
            android:padding="10sp"
            android:layout_below="@id/lastname"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="15sp"
            android:inputType="phone"
            android:singleLine="true"
            android:background="@drawable/signup_edit"
            android:padding="10sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/email"/>

        <EditText
            android:id="@+id/residential_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/residential_address"
            android:textSize="15sp"
            android:inputType="phone"
            android:singleLine="true"
            android:background="@drawable/signup_edit"
            android:padding="10sp"
            android:layout_marginTop="10sp"
            android:layout_below="@id/phone"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_title"
            android:entries="@array/identity_type"
            android:layout_marginTop="10sp"
            android:layout_below="@id/residential_address"
            />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_kyc"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/button_signup"
            android:layout_marginTop="15sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/spinner"/>
    </RelativeLayout>
</ScrollView>